
2020-10-17  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c: fixed C89 declaration

2020-10-13  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_runtime_hint): replaced leading tab by "note"
	  to harmonize with cobc

2020-10-12  Ron Norman <rjn@inglenet.com>

	* intrinsic.c, move.c, numeric.c, termio.c: updates to process
	  COB_TYPE_NUMERIC_COMP5 the same as COB_TYPE_NUMERIC_BINARY
	  except for DISPLAY then only display for f->attr->digits

2020-10-02  Simon Sobisch <simonsobisch@gnu.org>

	* call.c: define fmemopen if available but declaration missing

2020-10-01  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c: extracted (is_suppressed_key_value) from (cob_read_next)
	* fileio.c (indexed_rewrite): update to increase similarity to 4.x
	* fileio.c (cob_savekey): fixed undefined behaviour (memcpy to itself)

2020-10-02  James K. Lowden  <jklowden@symas.com>

	* screenio.c: quell unused-result warning when compiled with
	  _FORTIFY_SOURCE, providing a draft for GCC_PRAGMA and GCC_POP

2020-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* mlio.c, common.h: duplicated cob_xml/json_generate to allow
	  for new decimal_point param without breaking API from 2018
	* coblocal.h: include gettext without lib prefix
	* call.c, common.c: use EXIT_SUCCESS and EXIT_FAILURE instead of exit(0/1)

2020-09-29  Simon Sobisch <simonsobisch@gnu.org>

	* common.c [WITH_JSON_C]: added version output
	* mlio.c: adjusted check of defines for XML/JSON,
	  include json-c according to its docs

2020-09-23  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am (install-data-hook): removed as per initial patch from
	  Eric Gallager in bug #73, fixing bug #576

2020-09-08  James K. Lowden  <jklowden@symas.com>

	* intrinsic.c (cob_intr_seconds_from_formatted_time): fix bug #886

2020-08-31  Simon Sobisch <simonsobisch@gnu.org>

	* strings.c: huge performance improvements for INSPECT by splitting
	  the internal pseudo-marker into separate marker+replacement
