@@ -280,13 +280,29 @@ set_resolve_error (void)
 	cob_set_exception (COB_EC_PROGRAM_NOT_FOUND);
 }
 
-static void
-cob_set_library_path (const char *path)
+static int last_entry_is_working_directory (const char *buff, const char *pstr)
 {
+	const size_t pos = pstr - buff;	/* always > 2 */
+	if (buff[pos - 1] == '.'
+	 && buff[pos - 2] == PATHSEP_CHAR) {
+		return 1;
+	}
+	return 0;
+}
+
+/* resolves the actual library path used from
+   * COB_LIBRARY_PATH runtime setting
+   * "." as current working direktory [if not included already: prefixed]
+   * COB_LIBRARY_PATH inbuilt (which normally includes modules
+     like CBL_OC_DUMP) [if not included already: appended]
+*/
+static void
+cob_set_library_path ()
+{
+	char		buff[COB_MEDIUM_BUFF];
 	char		*p;
 	char		*pstr;
 	size_t		i;
-	size_t		size;
 	struct stat	st;
 
 	int 		flag;
@@ -297,59 +313,108 @@ cob_set_library_path (const char *path)
 		cob_free (resolve_alloc);
 	}
 
-	/* Count the number of separators */
-	i = 1;
-	size = 0;
-	for (p = (char *)path; *p; p++, size++) {
-		if (*p == PATHSEP_CHAR) {
-			i++;
+	/* setup buffer and count number of separators,
+	   check for "." */
+	i = 0;
+	pstr = buff + 2; /* leaving place for prefixing the working directory */
+	buff[0] = ' ';
+	buff[1] = PATHSEP_CHAR;
+	flag = 0;
+	if (cobsetptr->cob_library_path != NULL
+	 && strcmp (cobsetptr->cob_library_path, ".") != 0) {
+		for (p = cobsetptr->cob_library_path; *p; p++, pstr++) {
+#ifdef	_WIN32
+			if (*p == '/') {
+				*pstr = '\\';
+				continue;
+			}
+#else
+			if (*p == '\\') {
+				*pstr = '/';
+				continue;
+			}
+#endif
+			if (*p == PATHSEP_CHAR) {
+				i++;
+				flag |= last_entry_is_working_directory (buff, pstr);
+			}
+			*pstr = *p;
 		}
+		*pstr = PATHSEP_CHAR;
+		i++;
+		flag |= last_entry_is_working_directory (buff, pstr);
+		pstr++;
 	}
 
-	/* Build path array */
-	size++;
-	resolve_alloc = cob_malloc (size);
-	pstr = resolve_alloc;
-	for (p = (char *)path; *p; p++, pstr++) {
+	if (COB_LIBRARY_PATH[0] != 0
+	 && strcmp (COB_LIBRARY_PATH, ".") != 0) {
+		for (p = (char *)COB_LIBRARY_PATH; *p; p++, pstr++) {
 #ifdef	_WIN32
-		if (*p == (unsigned char)'/') {
-			*pstr = (unsigned char)'\\';
-			continue;
-		}
+			if (*p == '/') {
+				*pstr = '\\';
+				continue;
+			}
 #else
-		if (*p == (unsigned char)'\\') {
-			*pstr = (unsigned char)'/';
-			continue;
-		}
+			if (*p == '\\') {
+				*pstr = '/';
+				continue;
+			}
 #endif
-		*pstr = *p;
+			if (*p == PATHSEP_CHAR) {
+				i++;
+			}
+			*pstr = *p;
+		}
 	}
+	*pstr = 0;
+
+	/* prefix working directory if missing */
+	if (!flag) {
+		buff[0] = '.';
+		i++;
+		p = buff;
+	} else {
+		p = buff + 2;
+	}
+	/* Build path array */
+	resolve_alloc = cob_strdup (p);
+	pstr = resolve_alloc;
 
 	resolve_path = cob_malloc (sizeof (char *) * i);
 	resolve_size = 0;
 	pstr = resolve_alloc;
+
 	for (; ; ) {
 		p = strtok (pstr, PATHSEP_STR);
 		if (!p) {
 			break;
 		}
 		pstr = NULL;
+
+		/* check if directory
+		   (note: entries like X:\ _must_ be specified with trailing slash !) */
 		if (stat (p, &st) || !(S_ISDIR (st.st_mode))) {
+			/* possibly raise a warning, maybe only if explicit asked */
 			continue;
 		}
 
-		/*
-		 * look if we already have this path
-		 */
+		/* remove trailing slash from entry (always added on use) */
+		i = strlen (p) - 1;
+		if (p[i] == SLASH_CHAR) {
+			p[i] = 0;
+		}
+
+		/* check if we have this path already */
 		flag = 0;
 		for (i = 0; i < resolve_size; i++) {
-			if(strcmp(resolve_path[i], p) == 0) {
+			if (strcmp (resolve_path[i], p) == 0) {
 				flag = 1;
 				break;
 			}
 		}
 
-		if (!flag) {
+		/* finally: new entry for the resolve path */
+		if (flag == 0) {
 			resolve_path[resolve_size++] = p;
 		}
 	}
@@ -1378,6 +1443,7 @@ cob_exit_call (void)
 	if (resolve_path) {
 		cob_free (resolve_path);
 		resolve_path = NULL;
+		resolve_size = 0;
 	}
 
 #ifndef	COB_ALT_HASH
@@ -1449,7 +1515,6 @@ cob_exit_call (void)
 void
 cob_init_call (cob_global *lptr, cob_settings* sptr, const int check_mainhandle)
 {
-	char				*buff;
 	char				*s;
 	char				*p;
 	size_t				i;
@@ -1489,27 +1554,8 @@ cob_init_call (cob_global *lptr, cob_settings* sptr, const int check_mainhandle)
 	call_table = NULL;
 #endif
 
-	call_filename_buff = cob_malloc ((size_t)COB_NORMAL_BUFF);
-
-	buff = cob_fast_malloc ((size_t)COB_MEDIUM_BUFF);
-	if (cobsetptr->cob_library_path == NULL
-	 || strcmp(cobsetptr->cob_library_path, ".") == 0) {
-		if (strcmp(COB_LIBRARY_PATH, ".") == 0) {
-			snprintf (buff, (size_t)COB_MEDIUM_MAX, ".");
-		} else {
-			snprintf (buff, (size_t)COB_MEDIUM_MAX, ".%c%s",
-				  PATHSEP_CHAR, COB_LIBRARY_PATH);
-		}
-	} else {
-		if (strcmp(COB_LIBRARY_PATH, ".") == 0) {
-			snprintf (buff, (size_t)COB_MEDIUM_MAX, "%s%c.",
-				  cobsetptr->cob_library_path, PATHSEP_CHAR);
-		} else {
-			snprintf (buff, (size_t)COB_MEDIUM_MAX, "%s%c.%c%s",
-				  cobsetptr->cob_library_path, PATHSEP_CHAR, PATHSEP_CHAR, COB_LIBRARY_PATH);
-		}
-	}
-	cob_set_library_path (buff);
+	/* set static vars resolve_path (data in resolve_alloc) and resolve_size */
+	cob_set_library_path ();
 
 	lt_dlinit ();
 
@@ -1524,8 +1570,9 @@ cob_init_call (cob_global *lptr, cob_settings* sptr, const int check_mainhandle)
 	}
 #endif
 
-	if (cobsetptr->cob_preload_str != NULL
-	 && resolve_path != NULL) {
+	call_filename_buff = cob_malloc ((size_t)COB_NORMAL_BUFF);
+
+	if (cobsetptr->cob_preload_str != NULL) {
 
 		p = cob_strdup (cobsetptr->cob_preload_str);
 
@@ -1534,6 +1581,7 @@ cob_init_call (cob_global *lptr, cob_settings* sptr, const int check_mainhandle)
 
 		s = strtok (p, PATHSEP_STR);
 		for (; s; s = strtok (NULL, PATHSEP_STR)) {
+			char		buff[COB_MEDIUM_BUFF];
 #ifdef __OS400__
 			for (t = s; *t; ++t) {
 				*t = toupper (*t);
@@ -1541,7 +1589,6 @@ cob_init_call (cob_global *lptr, cob_settings* sptr, const int check_mainhandle)
 			cache_preload (t);
 #else
 			for (i = 0; i < resolve_size; ++i) {
-				buff[COB_MEDIUM_MAX] = 0;
 				snprintf (buff, (size_t)COB_MEDIUM_MAX,
 					  "%s%c%s.%s",
 					  resolve_path[i], SLASH_CHAR, s, COB_MODULE_EXT);
@@ -1549,7 +1596,7 @@ cob_init_call (cob_global *lptr, cob_settings* sptr, const int check_mainhandle)
 					break;
 				}
 			}
-			/* If not found, try just using the name */
+			/* If not found, try just using the name as-is */
 			if (i == resolve_size) {
 				(void)cache_preload (s);
 			}
@@ -1557,7 +1604,6 @@ cob_init_call (cob_global *lptr, cob_settings* sptr, const int check_mainhandle)
 		}
 		cob_free (p);
 	}
-	cob_free (buff);
 	call_buffer = cob_fast_malloc ((size_t)CALL_BUFF_SIZE);
 	call_lastsize = CALL_BUFF_SIZE;
 }
